Added a file for mansion underground rooms

--- a/campaign/locations/cities/Vifavea/Mansion/img/index.html
+++ b/campaign/locations/cities/Vifavea/Mansion/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,20 +46,13 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/cities/Vifavea/Mansion
+   Index of /home/awtorode/git/DnD/campaign/locations/cities/Vifavea/Mansion/img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="The_Mansion_Underground_Rooms.html">
-      The Mansion Underground Rooms
-     </a>
-    </li>
-    <li>
-     <a class="image-index-link" href="img/The_Mansion_Underground_Rooms.png">
-      <i class="fas fa-camera">
-      </i>
-      img/The_Mansion_Underground_Rooms.png
+     <a href="The_Mansion_Underground_Rooms.png">
+      The Mansion Underground Rooms.png
      </a>
     </li>
    </ul>
