--- a/campaign/index.html
+++ b/campaign/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="doc_test.html">
+      doc test
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="characters/index.html">
       <i class="fas fa-folder">
       </i>
