Updated some files and added a map

--- a/campaign/encounters/index.html
+++ b/campaign/encounters/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="The_Curse_Of_Bedo_The_Frog.html">
+      The Curse Of Bedo The Frog
+     </a>
+    </li>
    </ul>
   </div>
  </body>
