--- a/campaign/locations/landmarks/index.html
+++ b/campaign/locations/landmarks/index.html
@@ -106,6 +106,11 @@
      </a>
     </li>
     <li>
+     <a href="Zaubergrube_Caldera.html">
+      Zaubergrube Caldera
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/Temple_of_the_Seven_Winds.jpg">
       <i class="fas fa-camera">
       </i>
