Added some html files

--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -221,6 +221,11 @@
      </a>
     </li>
     <li>
+     <a href="galen_thornbro.html">
+      galen thornbro
+     </a>
+    </li>
+    <li>
      <a href="genji_tink.html">
       genji tink
      </a>
@@ -288,6 +293,11 @@
     <li>
      <a href="lirael_willowleaf.html">
       lirael willowleaf
+     </a>
+    </li>
+    <li>
+     <a href="lyra_nighsho.html">
+      lyra nighsho
      </a>
     </li>
     <li>
@@ -443,6 +453,11 @@
     <li>
      <a href="valen_shadowborn.html">
       valen shadowborn
+     </a>
+    </li>
+    <li>
+     <a href="vespera_shadowspir.html">
+      vespera shadowspir
      </a>
     </li>
     <li>
