--- a/campaign/characters/non-player/lyra_nighsho.html
+++ b/campaign/characters/non-player/lyra_nighsho.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   riven darkwire
+   lyra nighsho
   </title>
   <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
@@ -51,11 +51,11 @@
    <div>
     <div class="character-info">
      <h2>
-      Riven Darkwire
+      Lyra Nighsho
      </h2>
      <p>
       <i>
-       medium humanoid, neutral evil
+       medium humanoid, lawful neutral
       </i>
      </p>
      <p>
@@ -65,10 +65,10 @@
       Race: half-elf
      </p>
      <p>
-      Class: rogue
+      Class: ranger
      </p>
      <p>
-      Background: spy
+      Background: outlander
      </p>
     </div>
     <hr/>
@@ -82,19 +82,19 @@
        <strong>
         Armor Class:
        </strong>
-       17
+       15
       </li>
       <li>
        <strong>
         Hit Points:
        </strong>
-       100
+       75
       </li>
       <li>
        <strong>
         Speed:
        </strong>
-       40 feet
+       30 feet
       </li>
       <li>
        <strong>
@@ -112,20 +112,20 @@
        <strong>
         Senses:
        </strong>
-       passive perception 15, darkvision 60 ft., Passive Perception: 11
+       passive perception 14, darkvision 60 ft., Passive Perception: 13
       </li>
       <li>
        <strong>
         Languages:
        </strong>
-       common, elvish, thieves' cant
+       common, elvish
       </li>
      </ul>
     </div>
    </div>
    <div class="character-info">
-    <a href="img/riven_darkwire.jpg">
-     <img alt="riven_darkwire-image" class="character-img" src="img/riven_darkwire.jpg"/>
+    <a href="img/lyra_nighsho.jpg">
+     <img alt="lyra_nighsho-image" class="character-img" src="img/lyra_nighsho.jpg"/>
     </a>
    </div>
   </div>
@@ -155,34 +155,6 @@
       Strength
      </td>
      <td>
-      12
-     </td>
-     <td>
-      -
-     </td>
-     <td class="ability-modifier">
-      +1
-     </td>
-    </tr>
-    <tr>
-     <td>
-      Dexterity
-     </td>
-     <td>
-      20
-     </td>
-     <td>
-      -
-     </td>
-     <td class="ability-modifier">
-      +5
-     </td>
-    </tr>
-    <tr>
-     <td>
-      Constitution
-     </td>
-     <td>
       14
      </td>
      <td>
@@ -194,21 +166,21 @@
     </tr>
     <tr>
      <td>
-      Intelligence
+      Dexterity
      </td>
      <td>
-      16
+      18
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +3
+      +4
      </td>
     </tr>
     <tr>
      <td>
-      Wisdom
+      Constitution
      </td>
      <td>
       13
@@ -222,7 +194,21 @@
     </tr>
     <tr>
      <td>
-      Charisma
+      Intelligence
+     </td>
+     <td>
+      12
+     </td>
+     <td>
+      -
+     </td>
+     <td class="ability-modifier">
+      +1
+     </td>
+    </tr>
+    <tr>
+     <td>
+      Wisdom
      </td>
      <td>
       16
@@ -232,6 +218,20 @@
      </td>
      <td class="ability-modifier">
       +3
+     </td>
+    </tr>
+    <tr>
+     <td>
+      Charisma
+     </td>
+     <td>
+      10
+     </td>
+     <td>
+      -
+     </td>
+     <td class="ability-modifier">
+      +0
      </td>
     </tr>
    </table>
@@ -265,7 +265,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +5
+       +4
       </td>
      </tr>
      <tr>
@@ -276,7 +276,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +3
       </td>
      </tr>
      <tr>
@@ -287,7 +287,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +1
       </td>
      </tr>
      <tr>
@@ -298,7 +298,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +2
       </td>
      </tr>
      <tr>
@@ -306,11 +306,10 @@
        Deception (Cha)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       -
       </td>
       <td class="ability-modifier">
-       +5
+       +0
       </td>
      </tr>
      <tr>
@@ -321,7 +320,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +1
       </td>
      </tr>
      <tr>
@@ -332,7 +331,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +3
       </td>
      </tr>
      <tr>
@@ -343,7 +342,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -351,11 +350,10 @@
        Investigation (Int)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       -
       </td>
       <td class="ability-modifier">
-       +5
+       +1
       </td>
      </tr>
      <tr>
@@ -366,7 +364,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +3
       </td>
      </tr>
      <tr>
@@ -374,7 +372,8 @@
        Nature (Int)
       </td>
       <td class="proficient">
-       -
+       <i class="fas fa-check">
+       </i>
       </td>
       <td class="ability-modifier">
        +3
@@ -385,10 +384,11 @@
        Perception (Wis)
       </td>
       <td class="proficient">
-       -
+       <i class="fas fa-check">
+       </i>
       </td>
       <td class="ability-modifier">
-       +1
+       +5
       </td>
      </tr>
      <tr>
@@ -399,7 +399,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -410,7 +410,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -421,7 +421,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +1
       </td>
      </tr>
      <tr>
@@ -432,7 +432,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +5
+       +4
       </td>
      </tr>
      <tr>
@@ -440,11 +440,10 @@
        Stealth (Dex)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       -
       </td>
       <td class="ability-modifier">
-       +7
+       +4
       </td>
      </tr>
      <tr>
@@ -452,10 +451,11 @@
        Survival (Wis)
       </td>
       <td class="proficient">
-       -
+       <i class="fas fa-check">
+       </i>
       </td>
       <td class="ability-modifier">
-       +1
+       +5
       </td>
      </tr>
     </tbody>
@@ -470,9 +470,9 @@
    <ul>
     <li>
      <strong>
-      sneak attack, evasion, cunning action:
+      favored enemy, natural explorer:
      </strong>
-     [sneak attack, evasion, cunning action description]
+     [favored enemy, natural explorer description]
     </li>
    </ul>
   </div>
@@ -485,9 +485,9 @@
    <ul>
     <li>
      <strong>
-      shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools:
+      longbow, short sword, leather armor, explorer's pack, and a druidic focus - a carved wooden token from the heart of the whispering woods:
      </strong>
-     [shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools description]
+     [longbow, short sword, leather armor, explorer's pack, and a druidic focus - a carved wooden token from the heart of the whispering woods description]
     </li>
    </ul>
   </div>
@@ -498,7 +498,11 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Riven Darkwire is a cunning and skilled rogue, whose talents make her a valuable asset for the clandestine Council of Shadows. With a Half-Elf's keen senses and the charm of her human bloodline, she excels in infiltrating high-profile targets and gathering vital information. Equipped with her shadow-woven cloak, a pair of daggers, a hand crossbow, poison vials, a grappling hook, and thieves' tools, Riven's abilities in stealth, investigation, and deception are unmatched. As a member of ambush teams, she scouts enemy positions, creates opportunities for her allies, and employs her mastery of the mist's arcane energies to disorient foes. Her dedication to the Council's cause ensures she will only grow stronger with time, remaining an ever-present threat lurking in the mist's depths, ready to strike when the time is right.
+    Lyra Nighsho is a Half-Elf ranger, whose proficiency in the ways of nature and her disciplined approach to life makes her an ideal co-worker for Riven Darkwood in
+    <a href="../../lore/guilds/The_Council_of_Shadows.html">
+     The Council of Shadows
+    </a>
+    . Raised in the heart of the Whispering Woods, Lyra's connection to the natural world and her darkvision make her a skilled tracker and scout, perfectly complementing Riven's stealth and deception. With her longbow and short sword, she provides ranged support and is ready for close combat when necessary. As a reliable partner, Lyra's expertise in survival, perception, and nature allows her to navigate challenging terrains, provide valuable insights during reconnaissance missions, and uncover hidden threats. Her calm and level-headed demeanor contrasts well with Riven's cunning and charm, creating a dynamic duo that can adapt to any situation. Together, they form an effective team, each bringing unique strengths to accomplish the Council's secretive and often dangerous missions.
    </p>
   </div>
   <hr/>
