--- a/campaign/characters/non-player/vespera_shadowspir.html
+++ b/campaign/characters/non-player/vespera_shadowspir.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   riven darkwire
+   vespera shadowspir
   </title>
   <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
@@ -51,24 +51,24 @@
    <div>
     <div class="character-info">
      <h2>
-      Riven Darkwire
+      Vespera Shadowspir
      </h2>
      <p>
       <i>
-       medium humanoid, neutral evil
+       medium humanoid, chaotic neutral
       </i>
      </p>
      <p>
       Level: 3
      </p>
      <p>
-      Race: half-elf
+      Race: tiefling
      </p>
      <p>
-      Class: rogue
+      Class: sorcerer
      </p>
      <p>
-      Background: spy
+      Background: charlatan
      </p>
     </div>
     <hr/>
@@ -82,19 +82,19 @@
        <strong>
         Armor Class:
        </strong>
-       17
+       12
       </li>
       <li>
        <strong>
         Hit Points:
        </strong>
-       100
+       27
       </li>
       <li>
        <strong>
         Speed:
        </strong>
-       40 feet
+       30 feet
       </li>
       <li>
        <strong>
@@ -112,20 +112,20 @@
        <strong>
         Senses:
        </strong>
-       passive perception 15, darkvision 60 ft., Passive Perception: 11
+       passive perception 10, darkvision 60 ft., Passive Perception: 10
       </li>
       <li>
        <strong>
         Languages:
        </strong>
-       common, elvish, thieves' cant
+       common, abyssal
       </li>
      </ul>
     </div>
    </div>
    <div class="character-info">
-    <a href="img/riven_darkwire.jpg">
-     <img alt="riven_darkwire-image" class="character-img" src="img/riven_darkwire.jpg"/>
+    <a href="img/vespera_shadowspir.jpg">
+     <img alt="vespera_shadowspir-image" class="character-img" src="img/vespera_shadowspir.jpg"/>
     </a>
    </div>
   </div>
@@ -155,32 +155,18 @@
       Strength
      </td>
      <td>
-      12
+      8
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +1
+      -1
      </td>
     </tr>
     <tr>
      <td>
       Dexterity
-     </td>
-     <td>
-      20
-     </td>
-     <td>
-      -
-     </td>
-     <td class="ability-modifier">
-      +5
-     </td>
-    </tr>
-    <tr>
-     <td>
-      Constitution
      </td>
      <td>
       14
@@ -194,16 +180,30 @@
     </tr>
     <tr>
      <td>
-      Intelligence
+      Constitution
      </td>
      <td>
-      16
+      12
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +3
+      +1
+     </td>
+    </tr>
+    <tr>
+     <td>
+      Intelligence
+     </td>
+     <td>
+      10
+     </td>
+     <td>
+      -
+     </td>
+     <td class="ability-modifier">
+      +0
      </td>
     </tr>
     <tr>
@@ -211,13 +211,13 @@
       Wisdom
      </td>
      <td>
-      13
+      10
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +1
+      +0
      </td>
     </tr>
     <tr>
@@ -265,7 +265,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +5
+       +2
       </td>
      </tr>
      <tr>
@@ -276,7 +276,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -287,7 +287,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -298,7 +298,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       -1
       </td>
      </tr>
      <tr>
@@ -321,7 +321,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -332,7 +332,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -351,11 +351,10 @@
        Investigation (Int)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       -
       </td>
       <td class="ability-modifier">
-       +5
+       +0
       </td>
      </tr>
      <tr>
@@ -366,7 +365,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -377,7 +376,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -388,7 +387,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -407,10 +406,11 @@
        Persuasion (Cha)
       </td>
       <td class="proficient">
-       -
+       <i class="fas fa-check">
+       </i>
       </td>
       <td class="ability-modifier">
-       +3
+       +5
       </td>
      </tr>
      <tr>
@@ -421,7 +421,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -429,10 +429,11 @@
        Sleight of Hand (Dex)
       </td>
       <td class="proficient">
-       -
+       <i class="fas fa-check">
+       </i>
       </td>
       <td class="ability-modifier">
-       +5
+       +4
       </td>
      </tr>
      <tr>
@@ -440,11 +441,10 @@
        Stealth (Dex)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       -
       </td>
       <td class="ability-modifier">
-       +7
+       +2
       </td>
      </tr>
      <tr>
@@ -455,7 +455,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
     </tbody>
@@ -470,9 +470,9 @@
    <ul>
     <li>
      <strong>
-      sneak attack, evasion, cunning action:
+      font of magic, metamagic (subtle spell):
      </strong>
-     [sneak attack, evasion, cunning action description]
+     [font of magic, metamagic (subtle spell) description]
     </li>
    </ul>
   </div>
@@ -485,9 +485,9 @@
    <ul>
     <li>
      <strong>
-      shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools:
+      a fine set of clothes, a disguise kit, a set of weighted dice, and a pouch containing 15 gold pieces:
      </strong>
-     [shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools description]
+     [a fine set of clothes, a disguise kit, a set of weighted dice, and a pouch containing 15 gold pieces description]
     </li>
    </ul>
   </div>
@@ -498,7 +498,13 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Riven Darkwire is a cunning and skilled rogue, whose talents make her a valuable asset for the clandestine Council of Shadows. With a Half-Elf's keen senses and the charm of her human bloodline, she excels in infiltrating high-profile targets and gathering vital information. Equipped with her shadow-woven cloak, a pair of daggers, a hand crossbow, poison vials, a grappling hook, and thieves' tools, Riven's abilities in stealth, investigation, and deception are unmatched. As a member of ambush teams, she scouts enemy positions, creates opportunities for her allies, and employs her mastery of the mist's arcane energies to disorient foes. Her dedication to the Council's cause ensures she will only grow stronger with time, remaining an ever-present threat lurking in the mist's depths, ready to strike when the time is right.
+    Vespera Shadowspire is a level 3 Tiefling sorcerer and a cunning member of
+    <a href="../../lore/guilds/The_Council_of_Shadows.html">
+     The Council of Shadows
+    </a>
+    . With her natural talent for manipulating magic and her charismatic demeanor, she plays a pivotal role in the Council's schemes. Vespera's ability to cast spells subtly with her Metamagic enhances her deceptive prowess, making her a master of manipulating perceptions and bending situations to her advantage. Her Abyssal heritage is evident in her infernal appearance, complete with small horns, sharp teeth, and striking crimson eyes. Raised in the underbelly of
+    <a href="../../locations/regions/Matella/Matella.html">
+     Matella</a>, she perfected her skills in the arts of deception and illusion, easily blending in with crowds and misdirecting attention away from the Council's activities. Vespera's proficiency in Deception, Sleight of Hand, and Persuasion, along with her disguise kit and mastery of illusion spells, allows her to seamlessly infiltrate and gather information. As a chaotic neutral force within the Council, Vespera's unpredictability and skill set make her a valuable asset, using her magic to sow chaos and confusion among those who oppose the Council's shadowy objectives.
    </p>
   </div>
   <hr/>
