--- a/campaign/items/magic/index.html
+++ b/campaign/items/magic/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Parchment_Of_Higher_Sight.html">
+      Parchment Of Higher Sight
+     </a>
+    </li>
+    <li>
      <a href="Temporal_Cyrex_Crystal.html">
       Temporal Cyrex Crystal
      </a>
