--- a/campaign/lore/factions/index.html
+++ b/campaign/lore/factions/index.html
@@ -56,6 +56,11 @@
      </a>
     </li>
     <li>
+     <a href="Orbit.html">
+      Orbit
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/ironblood_vanguard_crest.jpg">
       <i class="fas fa-camera">
       </i>
