--- a/campaign/quests/index.html
+++ b/campaign/quests/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Zaubergrube_Arena.html">
+      Zaubergrube Arena
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="manastorm_legal_advisors/index.html">
       <i class="fas fa-folder">
       </i>
