--- a/campaign/quests/manastorm_legal_advisors/Manastorm_Legal_Advisors.html
+++ b/campaign/quests/manastorm_legal_advisors/Manastorm_Legal_Advisors.html
@@ -242,7 +242,15 @@
    <p>
     As the displaced chicken, Davis found himself five years in the past, stranded in the desert near the city he had embarked from. Having retained his memories, Davis traveled to the city where he sought refuge and recognition from
     <a href="../../characters/non-player/marla_hindesah.html">
-     marla hindesah</a>, the tavern keeper who had shown exceptional care for a local chicken in their original timeline. Approaching Marla, he hoped to win her favor and receive the same treatment. To Davis's surprise, Marla did not have a chicken when he arrived, as he would become the chicken she had cared for in the present timeline. From his travels to the city from deep within the desert, Davis was in bad shape and close to death. Marla first found him this way, and in an act of concern, nurtured Davis back to health.
+     marla hindesah</a>, the tavern keeper who had shown exceptional care for a local chicken in their original
+    <a href="../../timeline/timeline.html">
+     timeline
+    </a>
+    . Approaching Marla, he hoped to win her favor and receive the same treatment. To Davis's surprise, Marla did not have a chicken when he arrived, as he would become the chicken she had cared for in the present
+    <a href="../../timeline/timeline.html">
+     timeline
+    </a>
+    . From his travels to the city from deep within the desert, Davis was in bad shape and close to death. Marla first found him this way, and in an act of concern, nurtured Davis back to health.
    </p>
    <p>
     In an extraordinary twist of fate, one day, Davis found himself face to face with his past self - before being transformed into a chicken. Astonished by this unexpected encounter, he made every effort to capture his own attention. The vivid recollection of a similar interaction involving the tavern's resident chicken from his own past suddenly struck him. It dawned upon Davis that he must have been thrust back in time, trapped in his avian form until at least the present caught up with him, leaving no hope of reversing the transformation until that pivotal moment was reached. Capitalizing on this fortunate turn of events, Davis used his knowledge of future interactions and behaviors to gain Marla's trust and affection. Impressed by the chicken's apparent intelligence and unusual awareness, Marla welcomed Davis into her care, completely unaware of his true identity.
@@ -271,7 +279,15 @@
     </a>
     was sent back in time with the Puzzle Box Of
     <a href="../../lore/deities/Zytharoth.html">
-     Zytharoth</a>, two of the artifact then existed in the same timeline. As the timeline fractured with the existence of two Puzzle Boxes of
+     Zytharoth</a>, two of the artifact then existed in the same
+    <a href="../../timeline/timeline.html">
+     timeline
+    </a>
+    . As the
+    <a href="../../timeline/timeline.html">
+     timeline
+    </a>
+    fractured with the existence of two Puzzle Boxes of
     <a href="../../lore/deities/Zytharoth.html">
      Zytharoth</a>, a series of perplexing events unfolded throughout the region of
     <a href="../../locations/regions/Matella/Matella.html">
@@ -327,7 +343,11 @@
     <a href="../../spells/Chimeric_Ether.html">
      Chimeric Ether
     </a>
-    lasted months before slightly fading into a lighter haze that remained until the day there remained only one puzzle box in the timeline.
+    lasted months before slightly fading into a lighter haze that remained until the day there remained only one puzzle box in the
+    <a href="../../timeline/timeline.html">
+     timeline
+    </a>
+    .
    </p>
    <p>
     Another consequence of the multiplied
