--- a/campaign/quests/tinker_zepplin_sabotage/tinker_zepplin_sabotage.html
+++ b/campaign/quests/tinker_zepplin_sabotage/tinker_zepplin_sabotage.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
  <head>
   <meta charset="utf-8"/>
   <title>
-   index
+   tinker zepplin sabotage
   </title>
   <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
@@ -45,24 +46,19 @@
     Forward
    </a>
   </div>
-  <h1>
-   Index of /home/awtorode/git/DnD/campaign/quests/tinker_zepplin_sabotage
-  </h1>
-  <div class="indexLinks">
-   <ul>
-    <li>
-     <a href="tinker_zepplin_sabotage.html">
-      tinker zepplin sabotage
-     </a>
-    </li>
-    <li>
-     <a class="dir-index-link" href="tiles/index.html">
-      <i class="fas fa-folder">
-      </i>
-      tiles
-     </a>
-    </li>
-   </ul>
+  <div class="dnd-header">
+   <h1>
+    tinker zepplin sabotage
+   </h1>
   </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Summary
+   </h3>
+   <p class="first-paragraph">
+   </p>
+  </div>
+  <hr/>
  </body>
 </html>
