--- a/campaign/characters/non-player/galen_thornbro.html
+++ b/campaign/characters/non-player/galen_thornbro.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   riven darkwire
+   galen thornbro
   </title>
   <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
@@ -51,24 +51,24 @@
    <div>
     <div class="character-info">
      <h2>
-      Riven Darkwire
+      Galen Thornbro
      </h2>
      <p>
       <i>
-       medium humanoid, neutral evil
+       medium humanoid, lawful good
       </i>
      </p>
      <p>
-      Level: 3
+      Level: 5
      </p>
      <p>
-      Race: half-elf
+      Race: human
      </p>
      <p>
-      Class: rogue
+      Class: fighter
      </p>
      <p>
-      Background: spy
+      Background: soldier
      </p>
     </div>
     <hr/>
@@ -82,19 +82,19 @@
        <strong>
         Armor Class:
        </strong>
-       17
+       18
       </li>
       <li>
        <strong>
         Hit Points:
        </strong>
-       100
+       42
       </li>
       <li>
        <strong>
         Speed:
        </strong>
-       40 feet
+       30 feet
       </li>
       <li>
        <strong>
@@ -112,20 +112,20 @@
        <strong>
         Senses:
        </strong>
-       passive perception 15, darkvision 60 ft., Passive Perception: 11
+       passive perception 12, Passive Perception: 10
       </li>
       <li>
        <strong>
         Languages:
        </strong>
-       common, elvish, thieves' cant
+       common
       </li>
      </ul>
     </div>
    </div>
    <div class="character-info">
-    <a href="img/riven_darkwire.jpg">
-     <img alt="riven_darkwire-image" class="character-img" src="img/riven_darkwire.jpg"/>
+    <a href="img/galen_thornbro.jpg">
+     <img alt="galen_thornbro-image" class="character-img" src="img/galen_thornbro.jpg"/>
     </a>
    </div>
   </div>
@@ -155,13 +155,13 @@
       Strength
      </td>
      <td>
-      12
+      16
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +1
+      +3
      </td>
     </tr>
     <tr>
@@ -169,13 +169,13 @@
       Dexterity
      </td>
      <td>
-      20
+      12
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +5
+      +1
      </td>
     </tr>
     <tr>
@@ -197,18 +197,32 @@
       Intelligence
      </td>
      <td>
-      16
+      10
      </td>
      <td>
       -
      </td>
      <td class="ability-modifier">
-      +3
+      +0
      </td>
     </tr>
     <tr>
      <td>
       Wisdom
+     </td>
+     <td>
+      10
+     </td>
+     <td>
+      -
+     </td>
+     <td class="ability-modifier">
+      +0
+     </td>
+    </tr>
+    <tr>
+     <td>
+      Charisma
      </td>
      <td>
       13
@@ -218,20 +232,6 @@
      </td>
      <td class="ability-modifier">
       +1
-     </td>
-    </tr>
-    <tr>
-     <td>
-      Charisma
-     </td>
-     <td>
-      16
-     </td>
-     <td>
-      -
-     </td>
-     <td class="ability-modifier">
-      +3
      </td>
     </tr>
    </table>
@@ -265,7 +265,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +5
+       +1
       </td>
      </tr>
      <tr>
@@ -276,7 +276,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -287,7 +287,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -295,10 +295,11 @@
        Athletics (Str)
       </td>
       <td class="proficient">
-       -
+       <i class="fas fa-check">
+       </i>
       </td>
       <td class="ability-modifier">
-       +1
+       +6
       </td>
      </tr>
      <tr>
@@ -306,11 +307,10 @@
        Deception (Cha)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       -
       </td>
       <td class="ability-modifier">
-       +5
+       +1
       </td>
      </tr>
      <tr>
@@ -321,7 +321,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -332,7 +332,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -340,10 +340,11 @@
        Intimidation (Cha)
       </td>
       <td class="proficient">
-       -
+       <i class="fas fa-check">
+       </i>
       </td>
       <td class="ability-modifier">
-       +3
+       +4
       </td>
      </tr>
      <tr>
@@ -351,11 +352,10 @@
        Investigation (Int)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       -
       </td>
       <td class="ability-modifier">
-       +5
+       +0
       </td>
      </tr>
      <tr>
@@ -366,7 +366,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -377,7 +377,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -388,7 +388,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
      <tr>
@@ -399,7 +399,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +1
       </td>
      </tr>
      <tr>
@@ -410,7 +410,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +1
       </td>
      </tr>
      <tr>
@@ -421,7 +421,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +3
+       +0
       </td>
      </tr>
      <tr>
@@ -432,7 +432,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +5
+       +1
       </td>
      </tr>
      <tr>
@@ -440,11 +440,10 @@
        Stealth (Dex)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       -
       </td>
       <td class="ability-modifier">
-       +7
+       +1
       </td>
      </tr>
      <tr>
@@ -455,7 +454,7 @@
        -
       </td>
       <td class="ability-modifier">
-       +1
+       +0
       </td>
      </tr>
     </tbody>
@@ -470,9 +469,9 @@
    <ul>
     <li>
      <strong>
-      sneak attack, evasion, cunning action:
+      second wind, extra attack:
      </strong>
-     [sneak attack, evasion, cunning action description]
+     [second wind, extra attack description]
     </li>
    </ul>
   </div>
@@ -485,9 +484,9 @@
    <ul>
     <li>
      <strong>
-      shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools:
+      plate armor, greatsword, shield, dungeoneer's pack:
      </strong>
-     [shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools description]
+     [plate armor, greatsword, shield, dungeoneer's pack description]
     </li>
    </ul>
   </div>
@@ -498,7 +497,7 @@
     Background Information
    </h3>
    <p class="first-paragraph">
-    Riven Darkwire is a cunning and skilled rogue, whose talents make her a valuable asset for the clandestine Council of Shadows. With a Half-Elf's keen senses and the charm of her human bloodline, she excels in infiltrating high-profile targets and gathering vital information. Equipped with her shadow-woven cloak, a pair of daggers, a hand crossbow, poison vials, a grappling hook, and thieves' tools, Riven's abilities in stealth, investigation, and deception are unmatched. As a member of ambush teams, she scouts enemy positions, creates opportunities for her allies, and employs her mastery of the mist's arcane energies to disorient foes. Her dedication to the Council's cause ensures she will only grow stronger with time, remaining an ever-present threat lurking in the mist's depths, ready to strike when the time is right.
+    Galen Thornbrook, a level 5 Human fighter, is a battle-hardened veteran who has returned home after years of dedicated service in various conflicts. Standing tall in his plate armor and wielding a greatsword, Galen is a formidable force on the battlefield. His experiences have granted him a deep well of hit points and the ability to make extra attacks, allowing him to stand strong against enemies and strike them down with precision. Despite his imposing appearance, Galen's heart is filled with a sense of duty and a commitment to protecting his community. His proficiency in Athletics and Intimidation, skills developed during his time in the military, serve him well as he navigates the challenges of his new life at home.
    </p>
   </div>
   <hr/>
