--- a/campaign/creatures/monsters/index.html
+++ b/campaign/creatures/monsters/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Umbradraconis_Brastryx.html">
+      Umbradraconis Brastryx
+     </a>
+    </li>
+    <li>
      <a href="stoneshaper_golem.html">
       stoneshaper golem
      </a>
