--- a/campaign/locations/landmarks/Zaubergrube_Caldera.html
+++ b/campaign/locations/landmarks/Zaubergrube_Caldera.html
@@ -189,13 +189,28 @@
   <hr/>
   <div class="dnd-info">
    <h3>
-    The Forgotten Titan: Umbradraconis Brastryx
+    The Forgotten Titan:
+    <a href="../../creatures/monsters/Umbradraconis_Brastryx.html">
+     Umbradraconis Brastryx
+    </a>
    </h3>
    <p class="first-paragraph">
-    Deep within the heart of the Zaubergrube Caldera's jungle, an ancient and formidable creature, who's name (Umbradraconis Brastryx) has long since been forgotten, reigns as the unchallenged alpha. A monstrous fusion of a T-Rex, chicken, and dragon, this colossal beast has become a living legend, its true name long lost to the ages.
+    Deep within the heart of the Zaubergrube Caldera's jungle, an ancient and formidable creature, who's name (
+    <a href="../../creatures/monsters/Umbradraconis_Brastryx.html">
+     Umbradraconis Brastryx
+    </a>
+    ) has long since been forgotten, reigns as the unchallenged alpha. A monstrous fusion of a T-Rex, chicken, and dragon, this colossal beast has become a living legend, its true name long lost to the ages.
    </p>
    <p>
-    With scales as dark as the midnight sky and a fiery glint in its eyes, Umbradraconis Brastryx stands as a towering sentinel over the enchanted jungle. The claws that adorn its body bear an uncanny resemblance to those of a giant, otherworldly chicken, adding an eerie juxtaposition to its fearsome appearance. The mere echo of the Umbradraconis Brastryx's resonant roars sends shivers down the spines of all creatures within the Caldera. The deep, ominous reverberations weave through the magical vegetation, creating an otherworldly symphony that announces the presence of this ancient titan.
+    With scales as dark as the midnight sky and a fiery glint in its eyes,
+    <a href="../../creatures/monsters/Umbradraconis_Brastryx.html">
+     Umbradraconis Brastryx
+    </a>
+    stands as a towering sentinel over the enchanted jungle. The claws that adorn its body bear an uncanny resemblance to those of a giant, otherworldly chicken, adding an eerie juxtaposition to its fearsome appearance. The mere echo of the
+    <a href="../../creatures/monsters/Umbradraconis_Brastryx.html">
+     Umbradraconis Brastryx
+    </a>
+    's resonant roars sends shivers down the spines of all creatures within the Caldera. The deep, ominous reverberations weave through the magical vegetation, creating an otherworldly symphony that announces the presence of this ancient titan.
    </p>
    <p>
     Legends speak of the creature's mysterious origins, suggesting a fusion of magical energies that gave rise to this unique and terrifying being. The creature's breath carries an arcane aura, capable of distorting reality itself, making it a force to be reckoned with.
