--- a/campaign/notes/index.html
+++ b/campaign/notes/index.html
@@ -66,6 +66,26 @@
      </a>
     </li>
     <li>
+     <a href="Stockpile_Bazaar.html">
+      Stockpile Bazaar
+     </a>
+    </li>
+    <li>
+     <a href="engage_system.html">
+      engage system
+     </a>
+    </li>
+    <li>
+     <a href="orbit_system.html">
+      orbit system
+     </a>
+    </li>
+    <li>
+     <a href="profit_system.html">
+      profit system
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="story/index.html">
       <i class="fas fa-folder">
       </i>
