--- a/campaign/timeline/index.html
+++ b/campaign/timeline/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="timeline.html">
+      timeline
+     </a>
+    </li>
    </ul>
   </div>
  </body>
