Added some minor changes

--- a/campaign/notes/engage_system.html
+++ b/campaign/notes/engage_system.html
@@ -64,5 +64,97 @@
    </p>
   </div>
   <hr/>
+  <div class="dnd-info">
+   <h3>
+    Earning New Gains
+   </h3>
+   <p class="first-paragraph">
+    Gains come in the form of points that can be spent on Active Growth Endeavors (see below section). At the end of each session, the DM will decide how many Gains the players receive for that session. These points accumulate over time and can be spent at any point during game downtime. They cannot be spent during gameplay as they represent activities which your character would be spending time to improve upon. You do not have to spend all your Gains and they can be stored or saved for later use.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-info">
+   <h3>
+    Active Growth Endeavors
+   </h3>
+   <p class="first-paragraph">
+    These are all the endeavors that your character can be working on during game downtime. If they choose, they can spend their time learning a new language, studying, learning new skills, or more. Different tasks take varying amounts of work. The "Spending Gains" Chart below shows how many points it takes for each form of growth.
+   </p>
+  </div>
+  <hr/>
+  <div class="dnd-table">
+   <h3>
+    Spending Gains
+   </h3>
+   <p>
+    <table>
+     <tr>
+      <td>
+       Point Cost
+      </td>
+      <td>
+       Gains
+      </td>
+     </tr>
+     <tr>
+      <td>
+       10
+      </td>
+      <td>
+       1 character level (for characters level 1-10)
+      </td>
+     </tr>
+     <tr>
+      <td>
+       20
+      </td>
+      <td>
+       1 character level (for characters level 11+)
+      </td>
+     </tr>
+     <tr>
+      <td>
+       15
+      </td>
+      <td>
+       1 character feat
+      </td>
+     </tr>
+     <tr>
+      <td>
+       8
+      </td>
+      <td>
+       +1 to an attribute
+      </td>
+     </tr>
+     <tr>
+      <td>
+       6
+      </td>
+      <td>
+       1 new language proficiency
+      </td>
+     </tr>
+     <tr>
+      <td>
+       6
+      </td>
+      <td>
+       1 new weapon proficiency
+      </td>
+     </tr>
+     <tr>
+      <td>
+       8
+      </td>
+      <td>
+       1 new skill proficiency
+      </td>
+     </tr>
+    </table>
+   </p>
+  </div>
+  <hr/>
  </body>
 </html>
