--- a/campaign/notes/orbit_system.html
+++ b/campaign/notes/orbit_system.html
@@ -48,7 +48,10 @@
   </div>
   <div class="dnd-header">
    <h1>
-    orbit system
+    <a href="../lore/factions/Orbit.html">
+     Orbit
+    </a>
+    system
    </h1>
   </div>
   <hr/>
