--- a/campaign/notes/profit_system.html
+++ b/campaign/notes/profit_system.html
@@ -132,7 +132,88 @@
     Financial Growth Mechanics
    </h3>
    <p class="first-paragraph">
-    At the end of each downtime period, characters declare their chosen financial activity (Low Risk, Medium Risk, or High Risk). The Dungeon Master determines the outcome based on the chosen tier, taking into account the associated risks and potential gains or losses. A dice roll or a predetermined probability can be used to simulate the unpredictability of financial activities, especially in medium and high-risk scenarios. Characters can accumulate wealth over time, and their financial decisions may influence their lifestyle, ability to purchase items, or engage in other significant activities. The Financial Growth System aims to provide a balance between simplicity and engagement, offering characters diverse opportunities to navigate the financial landscape in the campaign.
+    At the end of each downtime period, characters declare their chosen financial activity (Low Risk, Medium Risk, or High Risk). The Dungeon Master determines the outcome based on the chosen tier, taking into account the associated risks and potential gains or losses. For simplicity, you can only pick one risk category per downtime period. A dice roll or a predetermined probability can be used to simulate the unpredictability of financial activities, especially in medium and high-risk scenarios. Characters can accumulate wealth over time, and their financial decisions may influence their lifestyle, ability to purchase items, or engage in other significant activities. The Financial Growth System aims to provide a balance between simplicity and engagement, offering characters diverse opportunities to navigate the financial landscape in the campaign.
+   </p>
+   <h4>
+    Low Risk
+   </h4>
+   <p class="subsection">
+    Roll 1d20, The result will determine financial change.
+   </p>
+   <p class="first-paragraph">
+    <ul>
+     <li>
+      1) No financial change.
+     </li>
+     <li>
+      2 to 7) Gain 1d6 gold.
+     </li>
+     <li>
+      8 to 13) Gain 2d6 gold.
+     </li>
+     <li>
+      14 to 19) Gain 3d6 gold.
+     </li>
+     <li>
+      20) Gain 25 gold.
+     </li>
+    </ul>
+   </p>
+   <h4>
+    Medium Risk
+   </h4>
+   <p class="subsection">
+    Choose a portion of your finances to invest. Roll 1d20, The result will determine financial change based on a percentage of the chosen finances.
+   </p>
+   <p class="first-paragraph">
+    <ul>
+     <li>
+      1 to 2) You lose all invested money.
+     </li>
+     <li>
+      3 to 5) You lose 25% of the invested money.
+     </li>
+     <li>
+      6 to 9) No financial change.
+     </li>
+     <li>
+      10 to 15) You gain 125% of the invested money.
+     </li>
+     <li>
+      16 to 19) You gain 150% of the invested money.
+     </li>
+     <li>
+      20) You gain 200% of the invested money.
+     </li>
+    </ul>
+   </p>
+   <h4>
+    High Risk
+   </h4>
+   <p class="subsection">
+    Choose a portion of your finances to gamble with. Roll 1d20, The result will determine financial change based on a percentage of the chosen finances.
+   </p>
+   <p class="first-paragraph">
+    <ul>
+     <li>
+      1 to 5) You lose all gambled money.
+     </li>
+     <li>
+      6 to 10) You lose 50% of the gambled money.
+     </li>
+     <li>
+      11 to 15) No financial change.
+     </li>
+     <li>
+      16 to 18) You gain 150% of the gambled money.
+     </li>
+     <li>
+      19) You gain 200% of the gambled money.
+     </li>
+     <li>
+      20) You gain 500% of the gambled money.
+     </li>
+    </ul>
    </p>
   </div>
   <hr/>
