--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
      </a>
     </li>
     <li>
+     <a class="dir-index-link" href=".idea/index.html">
+      <i class="fas fa-folder">
+      </i>
+      .idea
+     </a>
+    </li>
+    <li>
      <a class="dir-index-link" href="campaign/index.html">
       <i class="fas fa-folder">
       </i>
@@ -88,6 +95,13 @@
       <i class="fas fa-folder">
       </i>
       docs
+     </a>
+    </li>
+    <li>
+     <a class="dir-index-link" href="music/index.html">
+      <i class="fas fa-folder">
+      </i>
+      music
      </a>
     </li>
     <li>
