Added some images and created some characters

--- a/campaign/characters/non-player/img/index.html
+++ b/campaign/characters/non-player/img/index.html
@@ -221,6 +221,11 @@
      </a>
     </li>
     <li>
+     <a href="galen_thornbro.jpg">
+      galen thornbro.jpg
+     </a>
+    </li>
+    <li>
      <a href="genji_tink (1).jpg">
       genji tink (1).jpg
      </a>
@@ -248,6 +253,11 @@
     <li>
      <a href="isabella_shadowbrook.jpg">
       isabella shadowbrook.jpg
+     </a>
+    </li>
+    <li>
+     <a href="jake_durgo.jpg">
+      jake durgo.jpg
      </a>
     </li>
     <li>
@@ -293,6 +303,11 @@
     <li>
      <a href="lirael_willowleaf.jpg">
       lirael willowleaf.jpg
+     </a>
+    </li>
+    <li>
+     <a href="lyra_nighsho.jpg">
+      lyra nighsho.jpg
      </a>
     </li>
     <li>
