--- a/campaign/characters/non-player/index.html
+++ b/campaign/characters/non-player/index.html
@@ -251,6 +251,11 @@
      </a>
     </li>
     <li>
+     <a href="jake_durgo.html">
+      jake durgo
+     </a>
+    </li>
+    <li>
      <a href="jonas_fisher.html">
       jonas fisher
      </a>
@@ -760,6 +765,13 @@
      </a>
     </li>
     <li>
+     <a class="image-index-link" href="img/galen_thornbro.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/galen_thornbro.jpg
+     </a>
+    </li>
+    <li>
      <a class="image-index-link" href="img/genji_tink (1).jpg">
       <i class="fas fa-camera">
       </i>
@@ -799,6 +811,13 @@
       <i class="fas fa-camera">
       </i>
       img/isabella_shadowbrook.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/jake_durgo.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/jake_durgo.jpg
      </a>
     </li>
     <li>
@@ -862,6 +881,13 @@
       <i class="fas fa-camera">
       </i>
       img/lirael_willowleaf.jpg
+     </a>
+    </li>
+    <li>
+     <a class="image-index-link" href="img/lyra_nighsho.jpg">
+      <i class="fas fa-camera">
+      </i>
+      img/lyra_nighsho.jpg
      </a>
     </li>
     <li>
