--- a/campaign/locations/dungeons/Estoral_Caverns/index.html
+++ b/campaign/locations/dungeons/Estoral_Caverns/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,17 +46,10 @@
    </a>
   </div>
   <h1>
-   Index of /home/awtorode/git/DnD/campaign/locations/dungeons
+   Index of /home/awtorode/git/DnD/campaign/locations/dungeons/Estoral_Caverns
   </h1>
   <div class="indexLinks">
    <ul>
-    <li>
-     <a class="dir-index-link" href="Estoral_Caverns/index.html">
-      <i class="fas fa-folder">
-      </i>
-      Estoral Caverns
-     </a>
-    </li>
    </ul>
   </div>
  </body>
