Added some characters and images

--- a/campaign/characters/non-player/riven_darkwire.html
+++ b/campaign/characters/non-player/riven_darkwire.html
@@ -3,9 +3,9 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   riven darkwire
+   title
   </title>
-  <link href="../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -24,28 +24,6 @@
   </script>
  </head>
  <body>
-  <div class="navigation">
-   <a href="#" onclick="history.back(); return false;">
-    <i class="fas fa-arrow-left">
-    </i>
-    Back
-   </a>
-   <a href="./index.html">
-    <i class="fas fa-home">
-    </i>
-    Home
-   </a>
-   <a href="../index.html">
-    <i class="fas fa-level-up-alt">
-    </i>
-    Up
-   </a>
-   <a href="#" onclick="history.forward(); return false;">
-    <i class="fas fa-arrow-right">
-    </i>
-    Forward
-   </a>
-  </div>
   <!-- Top section for character information -->
   <div class="container">
    <div>
@@ -306,8 +284,7 @@
        Deception (Cha)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       <i class="fas fa-check"></i>
       </td>
       <td class="ability-modifier">
        +5
@@ -351,8 +328,7 @@
        Investigation (Int)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       <i class="fas fa-check"></i>
       </td>
       <td class="ability-modifier">
        +5
@@ -440,8 +416,7 @@
        Stealth (Dex)
       </td>
       <td class="proficient">
-       <i class="fas fa-check">
-       </i>
+       <i class="fas fa-check"></i>
       </td>
       <td class="ability-modifier">
        +7
@@ -468,12 +443,7 @@
     Abilities, Spells, and Actions
    </h3>
    <ul>
-    <li>
-     <strong>
-      sneak attack, evasion, cunning action:
-     </strong>
-     [sneak attack, evasion, cunning action description]
-    </li>
+    <li><strong>sneak attack, evasion, cunning action:</strong> [sneak attack, evasion, cunning action description]</li>
    </ul>
   </div>
   <hr/>
@@ -483,12 +453,7 @@
     Equipment
    </h3>
    <ul>
-    <li>
-     <strong>
-      shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools:
-     </strong>
-     [shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools description]
-    </li>
+    <li><strong>shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools:</strong> [shadow-woven cloak, a pair of daggers, hand crossbow, poison vials, grappling hook, and thieves' tools description]</li>
    </ul>
   </div>
   <hr/>
